tests/ui/feature-gates/feature-gate-type_ascription.stderr
error[E0658]: type ascription is experimental
  --> $DIR/feature-gate-type_ascription.rs:4:13
   |
LL |     let a = 10: u8;
   |             ^^^^^^
   |
   = note: see issue #23416 <https://github.com/crablang/crablang/issues/23416> for more information
   = help: add `#![feature(type_ascription)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
